# cuLA

./: mtp-dev-plan.md  mtp-linear-attention-deep-dive.md  mtp.md  pyproject.toml  sglang-linear-attention-mtp-analysis.md
benchmarks/: bench_chunk_delta_h.py  bench_fwd_o.py  bench_kda.py  bench_kda_chunk_intra.py  bench_kda_decode.py  bench_kda_fused_fwd.py  bench_kda_fwd_bwd_e2e.py  bench_kda_verify.py  bench_la_decode_vs_fla.py  bench_lightning_attn.py  bench_linear_attn.py  bench_recompute_wu.py  utils.py
cula/ops/: __init__.py  kda_verify_cute.py  kda_verify_triton.py
docs/: learning_kda_fwd_sm90.md  learning_kda_verify.md
tests/: test_kda_verify.py
